// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Container: Change Plan should not show plans 1`] = `
<form>
  <Grid>
    <Grid.Column>
      <Panel />
      <AccessControl
        condition={[Function]}
      >
        <CardSection
          account={
            Object {
              "billing": Object {},
              "subscription": Object {
                "code": "free",
                "self_serve": true,
              },
            }
          }
          canUpdateBillingInfo={false}
          countries={Array []}
          handleCardToggle={[Function]}
          selectedPlan={Object {}}
          useSavedCC={null}
        />
      </AccessControl>
    </Grid.Column>
    <Grid.Column
      md={5}
      xs={12}
    >
      <Confirmation
        billingEnabled={true}
        current={Object {}}
        disableSubmit={true}
        selected={Object {}}
        selectedPromo={Object {}}
        verifyPromoCode={[MockFunction]}
      />
    </Grid.Column>
  </Grid>
</form>
`;

exports[`Form Container: Change Plan should render 1`] = `
<form>
  <Grid>
    <Grid.Column>
      <Panel>
        <_default
          onChange={[Function]}
          plans={
            Array [
              Object {
                "code": "paid",
                "isFree": false,
                "volume": 15000,
              },
              Object {
                "code": "free",
                "isFree": true,
                "volume": 100000,
              },
            ]
          }
        />
      </Panel>
      <AccessControl
        condition={[Function]}
      >
        <CardSection
          account={
            Object {
              "billing": Object {},
              "subscription": Object {
                "code": "free",
                "self_serve": true,
              },
            }
          }
          canUpdateBillingInfo={false}
          countries={Array []}
          handleCardToggle={[Function]}
          selectedPlan={Object {}}
          useSavedCC={null}
        />
      </AccessControl>
    </Grid.Column>
    <Grid.Column
      md={5}
      xs={12}
    >
      <Confirmation
        billingEnabled={true}
        current={Object {}}
        disableSubmit={true}
        selected={Object {}}
        selectedPromo={Object {}}
        verifyPromoCode={[MockFunction]}
      />
    </Grid.Column>
  </Grid>
</form>
`;

exports[`Form Container: Change Plan should render error 1`] = `
<ApiErrorBanner
  errorDetails="Oh no! It broke."
  message="We couldn't render the page. Reload to try again."
  reload={[Function]}
  status="danger"
/>
`;

exports[`Form Container: Change Plan should show saved card 1`] = `
<form>
  <Grid>
    <Grid.Column>
      <Panel>
        <_default
          onChange={[Function]}
          plans={
            Array [
              Object {
                "code": "paid",
                "isFree": false,
                "volume": 15000,
              },
              Object {
                "code": "free",
                "isFree": true,
                "volume": 100000,
              },
            ]
          }
        />
      </Panel>
      <AccessControl
        condition={[Function]}
      >
        <CardSection
          account={
            Object {
              "billing": Object {},
              "subscription": Object {
                "code": "free",
                "self_serve": true,
              },
            }
          }
          canUpdateBillingInfo={true}
          countries={Array []}
          handleCardToggle={[Function]}
          selectedPlan={Object {}}
          useSavedCC={true}
        />
      </AccessControl>
    </Grid.Column>
    <Grid.Column
      md={5}
      xs={12}
    >
      <Confirmation
        billingEnabled={true}
        current={Object {}}
        disableSubmit={true}
        selected={Object {}}
        selectedPromo={Object {}}
        verifyPromoCode={[MockFunction]}
      />
    </Grid.Column>
  </Grid>
</form>
`;
